{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 36,
  "lineage": "7037b2b2-ff74-c7bb-3b0b-1d2862102cd1",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_fastapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8000",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-01T21:58:22.463-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bitcitychamp-project/global/firewalls/clone-voice-allow-fastapi",
            "log_config": [],
            "name": "clone-voice-allow-fastapi",
            "network": "https://www.googleapis.com/compute/v1/projects/bitcitychamp-project/global/networks/clone-voice-vpc-dev",
            "priority": 1000,
            "project": "bitcitychamp-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bitcitychamp-project/global/firewalls/clone-voice-allow-fastapi",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "clone-voice-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-01T21:58:22.606-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bitcitychamp-project/global/firewalls/clone-voice-allow-ssh",
            "log_config": [],
            "name": "clone-voice-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/bitcitychamp-project/global/networks/clone-voice-vpc-dev",
            "priority": 1000,
            "project": "bitcitychamp-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bitcitychamp-project/global/firewalls/clone-voice-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "clone-voice-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/bitcitychamp-project/global/networks/clone-voice-vpc-dev",
            "mtu": 0,
            "name": "clone-voice-vpc-dev",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2354468789430743223",
            "project": "bitcitychamp-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bitcitychamp-project/global/networks/clone-voice-vpc-dev"
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-08-01T21:58:22.518-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/bitcitychamp-project/regions/us-central1/subnetworks/clone-voice-subnet-us-central1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "clone-voice-subnet-us-central1",
            "network": "https://www.googleapis.com/compute/v1/projects/bitcitychamp-project/global/networks/clone-voice-vpc-dev",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "bitcitychamp-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bitcitychamp-project/regions/us-central1/subnetworks/clone-voice-subnet-us-central1",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}